# pantstation-cli

./: Cargo.toml  README.md
.github/workflows/: build-n-release.yml
src/: bin.rs  lib.rs
